# Quilt-Designer

./: .gitignore  Cargo.toml  README.md  output.txt
patterns/: corner-square.yaml  four-squares.yaml  four-triangles.yaml  four_triangles.yaml  half-square-triangle.yaml
shaders/fxaa/: fragment.glsl  vertex.glsl
shaders/msaa/: fragment.glsl  vertex.glsl
shaders/picker/: fragment.txt  vertex.glsl  vertex.txt
shaders/solid_color/: fragment.glsl  fragment.txt  vertex.glsl  vertex.txt
src/: brush.rs  camera_transform.rs  canvas.rs  click.rs  frame_timing.rs  main.rs  menubar_manager.rs  parser.rs  path.rs  quilt.rs  system.rs  texture_brush.rs  util.rs  window.rs
src/draw/: brush.rs  mod.rs  path.rs  texture_brush.rs
src/parse/: mod.rs
src/program/: mod.rs  ui_manager.rs  update_status.rs
src/program/quilt/: block.rs  brush.rs  mod.rs  protective_struct.rs
src/quilt/: block.rs  block_pattern.rs  brush.rs  child_shape.rs  mod.rs  square.rs
src/quilt/block/: block_manager.rs  block_pattern.rs
src/quilt/square/: block_manager.rs  square_pattern.rs
src/render/: material.rs  matrix.rs  mod.rs  object.rs  picker.rs  renderer.rs  shape.rs  shape_object.rs  textures.rs  ui_manager.rs
src/render/material/: material_manager.rs
src/renderer/: anti_aliasing.rs  drawable_frame.rs  fxaa.rs  mod.rs  new_picker.rs  picker.rs  shape_object.rs  textures.rs  vertex.rs
src/util/: click.rs  frame_timing.rs  image.rs  keyboard_tracker.rs  keys_pressed.rs  mod.rs  parser.rs  rectangle.rs  undo_redo.rs
src/window/: canvas.rs  pattern_bar.rs  texture_bar.rs
(+8 files in other folders)
