[package]
name = "glium_gtk"
version = "0.1.0"
authors = ["ColemanSandefur <coleman.sandefur@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = "0.30.0"
image = "0.23.14"
chrono = "0.4"
lyon = "0.17.5"
gtk = "0.14.0"
gio = "*"
glib = "*"
gl_loader = "0.1.2"