[package]
name = "glium_gtk"
version = "0.1.0"
authors = ["ColemanSandefur <coleman.sandefur@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = { version = "0.29.0", default-features = true }
image = "0.23.14"
chrono = "0.4"
lyon = "0.17.5"
gl_loader = "0.1.2"
imgui = "0.7.0"
imgui-glium-renderer = "0.7.0"
imgui-winit-support = "0.7.0"
winit = "0.25.0"
clipboard = "0.5"
rand = "0.8.4"