[package]
name = "glium_gtk"
version = "0.1.0"
authors = ["ColemanSandefur <coleman.sandefur@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = { version = "0.29.0", default-features = true }
image = "0.23.14"
chrono = "0.4"
lyon = "0.17.5"
gl_loader = "0.1.2"
imgui = "0.7.0"
imgui-glium-renderer = "0.7.0"
imgui-winit-support = "0.7.0"
winit = "0.25.0"
clipboard = "0.5"
rand = "0.8.4"
lazy_static = "1.4.0"
cgmath = "0.18.0"
yaml-rust = "0.4.5"
linked-hash-map = "0.5.4"
sha2 = "0.9.5"
zip = "0.5.13"